docs/7.52/md/abenabap_system_commands.md
---
title: "ABAP and Operating System Statements"
description: |
  Operating system statements or system commands execute statements or programs directly on the operating system of an application server or a presentation server. Executing operating system statements from ABAP programs should be the exception not the rule, however it may become necessary in system o
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands.htm"
abapFile: "abenabap_system_commands.htm"
keywords: ["do", "data", "abenabap", "system", "commands"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) → 

ABAP and Operating System Statements

Operating system statements or system commands execute statements or programs directly on the operating system of an application server or a presentation server. Executing operating system statements from ABAP programs should be the exception not the rule, however it may become necessary in system or administration programs to call operating system functions that cannot be accessed by ABAP statements. In certain circumstances, input from external sources may need to be passed to the operating system.

-   [Operating System Statements of the Application Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands_appl.htm)

-   [Operating System Statements of the Presentation Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands_pres.htm)

Security Note

Using input from external sources in operating system statements incurs the risk of [system command injections](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensys_comm_injections_scrty.htm).

Continue
[Operating System Statements of the Application Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands_appl.htm)
[Operating System Statements of the Presentation Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_system_commands_pres.htm)